Feat : delete name list

--- a/index.html
+++ b/index.html
@@ -27,8 +27,7 @@
     <div>
         <ul id ="newName"></ul>
     </div>
+    <script type ="text/javascript" src="apikey.js"></script>
     <script src="./src/app.js"></script>
-    <script src="./src/apikey.js"></script>
-
 </body>
 </html>
