feat : api 키 입력 받기(로컬스토리지에 저장)

--- a/index.html
+++ b/index.html
@@ -11,30 +11,38 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>이름 만들기</h1>
-    <form id ="getInfo-form">
-        <div id ="inputArea">
-            <label for ="laguage"> 
+    <h1>MakeName</h1>
+    <div class ="inputArea" id ="keyArea">
+        <span>입력된 API 키는 로컬스토리지에 저장됩니다.</span>
+        <input class ="inputText" type="text" id="apiKeyInput" placeholder="발급 받은 API 키를 입력해주세요.">
+        <button id="submitApiKeyBtn">확인</button>
+    </div>
+    <form class ="hidden" id ="getInfoForm" action="">
+        <div class ="inputArea">
+            <label for ="language"> 
                 사용 언어 : 
                 <input 
                     type = "text"
-                    id ="lang"
+                    id ="language"
+                    class ="inputText"
                 >
             </label>
-            <label for ="laguage"> 
+            <label for ="role"> 
                 역할 : 
                 <input 
                     type  = "text"
-                    id = "role">
+                    id = "role"
+                    class ="inputText"
+                    >
             </label>
         </div>
         <div id ="choiceArea">
-            <button type ="submit">함수이름생성</button>
-            <button type ="submit">변수이름생성</button>
+            <button type ="submit" value="function">함수이름생성</button>
+            <button type ="submit" value="variable">변수이름생성</button>
         </div>
     </form>
     <div>
-        <ul id ="newName"></ul>
+        <ul id ="newNameList"></ul>
     </div>
     <script type ="text/javascript" src="apikey.js"></script>
     <script src="./src/app.js"></script>
