--- a/index.html
+++ b/index.html
@@ -12,8 +12,12 @@
 </head>
 <body>
     <h1>MakeName</h1>
-    <div class ="inputArea" id ="keyArea">
-        <input class ="inputText" type="text" id="apiKeyInput" placeholder="발급 받은 API 키를 입력해주세요.">
+    <div>
+        <div id="inputApiArea"></div>
+            <input class ="inputText" id="apiKeyInput" placeholder="발급 받은 API 키를 입력해주세요.">
+            <button id ="saveApiBtn">저장</button>
+        </div>
+        <span id ="saveApiMsg">입력한 Key값은 로컬스토리지에 저장됩니다</span>
     </div>
     <form class ="hidden" id ="getInfoForm" action="">
         <div class ="inputArea">
@@ -35,8 +39,8 @@
             </label>
         </div>
         <div id ="choiceArea">
-            <button type ="submit" value="function">함수이름생성</button>
-            <button type ="submit" value="variable">변수이름생성</button>
+            <button class="makeBtn" type ="submit" value="function">함수이름생성</button>
+            <button class="makeBtn" type ="submit" value="variable">변수이름생성</button>
         </div>
     </form>
     <div>
