--- a/public/index.html
+++ b/public/index.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;500&family=Roboto:wght@300&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./src/style.css"> 
+<html>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>MakeName</title>
-</head>
-<body>
+    <meta 
+        name ="description"
+        content="ChatGPT를 이용한 함수 및 변수 작성"
+    >
+    <link rel="stylesheet" href="./src/style.css">
+  </head>
+  <body>
     <h1>MakeName</h1>
     <div>
         <div id="inputApiArea"></div>
-            <input class ="inputText" id="apiKeyInput" placeholder="발급 받은 API 키를 입력해주세요.">
+            <input class ="inputText" id="apiKeyInput" placeholder="API 키를 입력해주세요.">
             <button id ="saveApiBtn">저장</button>
         </div>
         <span id ="saveApiMsg">입력한 Key값은 로컬스토리지에 저장됩니다</span>
@@ -46,6 +46,13 @@
     <div>
         <ul id ="newNameList"></ul>
     </div>
-    <script src="./src/app.js"></script>
-</body>
+    <script src="https://www.gstatic.com/firebasejs/8.6.5/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.6.5/firebase-firestore.js"></script>
+    <script type="module" src="./src/app.js"></script>
+    <script type ="module"src="./src/firebase.js"></script>
+    
+
+    
+    </script>
+  </body>
 </html>
