--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
             <input class ="inputText" id="apiKeyInput" placeholder="API 키를 입력해주세요.">
             <button id ="saveApiBtn">저장</button>
         </div>
-        <span id ="saveApiMsg">입력한 Key값은 로컬스토리지에 저장됩니다</span>
+        <span id =class ="msg" id="loadMsg">입력한 Key값은 로컬스토리지에 저장됩니다</span>
     </div>
     <form class ="hidden" id ="getInfoForm" action="">
         <div class ="inputArea">
@@ -43,6 +43,12 @@
             <button class="makeBtn" type ="submit" value="variable">변수이름생성</button>
         </div>
     </form>
+    <div id="loading" style="display: none;">
+        <div class="line"></div>
+        <div class="line"></div>
+        <div class="line"></div>
+        <span class ="msg" id="loadMsg">이름을 생성하고 있어요!</span>
+    </div>
     <div>
         <ul id ="newNameList"></ul>
     </div>
